fix borders on duplo-stripe on small screens

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4665,8 +4665,25 @@ svg.icon,
   .stripe [m-DuploCount="4"] [m-Duplo="4"] p {
     display: none; }
 
+@media screen and (min-width: 40em) {
+  .stripe [m-DuploCount="4"] [m-Duplo="2"],
+  .stripe [m-DuploCount="4"] [m-Duplo="3"],
+  .stripe [m-DuploCount="4"] [m-Duplo="4"] {
+    width: 33.3333333333%;
+    float: left; }
+    .stripe [m-DuploCount="4"] [m-Duplo="2"]:last-child:not(:first-child),
+    .stripe [m-DuploCount="4"] [m-Duplo="3"]:last-child:not(:first-child),
+    .stripe [m-DuploCount="4"] [m-Duplo="4"]:last-child:not(:first-child) {
+      float: right; } }
+
 .stripe [m-DuploCount="4"] [m-Duplo="2"] {
   border-left-width: 0 !important; }
+  @media screen and (max-width: 39.9375em) {
+    .stripe [m-DuploCount="4"] [m-Duplo="2"] {
+      border-right-width: 0 !important; } }
+  @media screen and (min-width: 40em) {
+    .stripe [m-DuploCount="4"] [m-Duplo="2"] h2 {
+      font-size: 1.125em; } }
   @media screen and (min-width: 64em) {
     .stripe [m-DuploCount="4"] [m-Duplo="2"] {
       border-left-width: 0.15625rem !important;
@@ -4702,6 +4719,14 @@ svg.icon,
   .stripe [m-DuploCount="4"] [m-Duplo="4"] p {
     display: block;
     font-size: 0.8888888889em; } }
+
+@media screen and (max-width: 39.9375em) {
+  .stripe [m-DuploCount="4"] [m-Duplo="3"] {
+    border-left-width: 0 !important; } }
+
+@media screen and (max-width: 39.9375em) {
+  .stripe [m-DuploCount="4"] [m-Duplo="4"] {
+    border-right-width: 0 !important; } }
 
 @media screen and (min-width: 64em) {
   .stripe [m-DuploCount="4"] [m-Duplo="4"] {
